--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
 <body>
     <h1>Gidthub</h1>
     <img src="github.png" alt="github">
+    <p>This is a paragraph added to the main branch after 
+        first commit.
+    </p>
 </body>
 </html>
